force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Allowed_SSO_Providers__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Allowed_SSO_Providers__c</fullName>
    <description>Comma separated list of Identity Provider Display Names to allow with SSO.</description>
    <inlineHelpText>Comma separated list of Identity Provider Display Names to allow with SSO.</inlineHelpText>
    <label>Allowed SSO Providers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>