force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Apply_Omni_Offline_Mapping__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Apply_Omni_Offline_Mapping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Apply status mappings when Omni-Channel is in the Offline state.</description>
    <inlineHelpText>Apply status mappings when Omni-Channel is in the Offline state.</inlineHelpText>
    <label>Apply mappings when Offline</label>
    <type>Checkbox</type>
</CustomField>