force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__CaaS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__CaaS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you are a PureConnect Cloud customer. Leave unchecked if a Premise customer.</description>
    <inlineHelpText>Check this box if you are a PureConnect Cloud customer. Leave unchecked if a Premise customer.</inlineHelpText>
    <label>PureConnect Cloud Enabled</label>
    <type>Checkbox</type>
</CustomField>