force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__CaaS_Url__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__CaaS_Url__c</fullName>
    <description>Specify the PureConnect Cloud URL provided by your PureConnect Cloud contact, including /crm/ at the end. For example, https://your_caas_url/crm/.</description>
    <inlineHelpText>Specify the PureConnect Cloud URL provided by your PureConnect Cloud contact, including /crm/ at the end. For example, https://your_caas_url/crm/.</inlineHelpText>
    <label>PureConnect Cloud Url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>