force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Connected_Interactions_Call_Logs__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Connected_Interactions_Call_Logs__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only saves call logs for interactions that have been connected from the agent&apos;s perspective at least once.</description>
    <inlineHelpText>Checking this box only saves call logs for interactions that have been connected from the agent&apos;s perspective at least once.</inlineHelpText>
    <label>Only Save Connected Interactions</label>
    <type>Checkbox</type>
</CustomField>