force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Disable_IC_Auth__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Disable_IC_Auth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to disable IC Authentication with SSO.</description>
    <inlineHelpText>Check this box to disable IC Authentication with SSO.</inlineHelpText>
    <label>Disable IC Auth</label>
    <type>Checkbox</type>
</CustomField>