force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Auto_Association__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Auto_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to automatically associate the Contact and Related fields to the interaction&apos;s call log.</description>
    <inlineHelpText>Check this box to automatically associate the Contact and Related fields to the interaction&apos;s call log.</inlineHelpText>
    <label>Enable Auto Association on Navigation</label>
    <type>Checkbox</type>
</CustomField>