force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Call_Log_Functionality__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Call_Log_Functionality__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables the PureConnect for Salesforce call logs to be written to the Salesforce Activity.</description>
    <inlineHelpText>Checking this box enables the call log in PureConnect for Salesforce and saves the call log to a Salesforce activity.</inlineHelpText>
    <label>Enable Call Logs</label>
    <type>Checkbox</type>
</CustomField>