force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Call_Logs__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Call_Logs__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If using Internet Explorer, do not check this box. Internet Explorer has problems saving the call log when multiple browser tabs or windows are open, so this setting prevents edits to the call log altogether.</description>
    <inlineHelpText>If using Internet Explorer, do not check this box. Internet Explorer has problems saving the call log when multiple browser tabs or windows are open, so this setting prevents edits to the call log altogether.</inlineHelpText>
    <label>Enable Call Log Editing</label>
    <type>Checkbox</type>
</CustomField>