force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Integration_Console_Events_API__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Integration_Console_Events_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable special Salesforce console events to integrate with PureConnect for Salesforce. Reserved for Genesys Professional Services.</description>
    <inlineHelpText>Check this box to enable special Salesforce console events to integrate with PureConnect for Salesforce. Reserved for Genesys Professional Services.</inlineHelpText>
    <label>Enable Integration Console Events API</label>
    <type>Checkbox</type>
</CustomField>