force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Omni_Sync__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Omni_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable status synchronization between Omni-Channel and PureConnect.</description>
    <inlineHelpText>Enable status synchronization between Omni-Channel and PureConnect.</inlineHelpText>
    <label>Enable Omni-Channel Sync</label>
    <type>Checkbox</type>
</CustomField>