force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Server_Sent_Events__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Server_Sent_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to enable Server-sent Events with PureConnect 2016 R3 or later. May require configuration changes to the Web Proxy.</description>
    <inlineHelpText>Check this box to enable Server-sent Events with PureConnect 2016 R3 or later. May require configuration changes to the Web Proxy.</inlineHelpText>
    <label>Enable Server-sent Events</label>
    <type>Checkbox</type>
</CustomField>