force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_SSO__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_SSO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to use Single Sign On. Internet Explorer does not currently support SSO without special configuration to the Web Proxy.</description>
    <inlineHelpText>Check this box to use Single Sign On. Internet Explorer does not currently support SSO without special configuration to the Web Proxy.</inlineHelpText>
    <label>Enable Single Sign On</label>
    <type>Checkbox</type>
</CustomField>