force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Enable_Wrap_Ups__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Enable_Wrap_Ups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if one or more of your PureConnect workgroups require wrap-up codes. Wrap-ups may not work as expected in Internet Explorer when multiple browser tabs or windows are open.</description>
    <inlineHelpText>Check this box if one or more of your PureConnect workgroups require wrap-up codes. Wrap-ups may not work as expected in Internet Explorer when multiple browser tabs or windows are open.</inlineHelpText>
    <label>Enable Wrap-ups</label>
    <type>Checkbox</type>
</CustomField>