force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Primary_Server__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Primary_Server__c</fullName>
    <description>Specify the PureConnect Server 1 Name.</description>
    <inlineHelpText>Specify the PureConnect Server 1 Name.</inlineHelpText>
    <label>PureConnect Server 1 Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>