force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Proxy_Server__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Proxy_Server__c</fullName>
    <description>The Web Proxy Address that forwards requests from PureConnect for Salesforce to the PureConnect server.</description>
    <inlineHelpText>Specify the Web Proxy Address that forwards requests from PureConnect for Salesforce to the PureConnect server. Use https://, the /api path and a final forward slash, e.g. https://web_proxy_address/api/. See the Administrator Guide for more details</inlineHelpText>
    <label>Web Proxy Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>