force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Secondary_Server__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Secondary_Server__c</fullName>
    <description>Specify the PureConnect Server 2 Name used for switchovers.</description>
    <inlineHelpText>Specify the PureConnect Server 2 Name used for switchovers.</inlineHelpText>
    <label>PureConnect Server 2 Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>