force-app/main/default/objects/CRMWebClient__CallCenterCustomSettings__c/fields/CRMWebClient__Station_Logins_Independent_of_Session__c.field-meta.xml
<CustomField>
    <fullName>CRMWebClient__Station_Logins_Independent_of_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to prevent PureConnect station logouts when navigating away from Salesforce.</description>
    <inlineHelpText>Check this box to prevent PureConnect station logouts when navigating away from Salesforce.</inlineHelpText>
    <label>Prevent station logout on navigation</label>
    <type>Checkbox</type>
</CustomField>